docs/exchange/v5/stencil.md
# Stencil — catalog wire v5

> Part of the [catalog **v5** wire format](README.md) ([exchange overview](../README.md)).

**Role:** a reusable, parameterised document fragment (e.g. a company header) that templates embed. Stencils are **published** — the carried content is pinned to a published version number.

**DTO:** `StencilResource` (`CatalogResource` subtype, `epistola-catalog`).
**Exported by:** [`ExportResources.kt`](../../../modules/epistola-core/src/main/kotlin/app/epistola/suite/catalog/queries/ExportResources.kt) — selects the **latest published** stencil version and stamps its number into `version`.
**Imported by:** [`InstallFromCatalog`](../../../modules/epistola-core/src/main/kotlin/app/epistola/suite/catalog/commands/InstallFromCatalog.kt); conflict handling in [`ImportCatalogZip`](../../../modules/epistola-core/src/main/kotlin/app/epistola/suite/catalog/commands/ImportCatalogZip.kt).
**Install order:** 5 (before templates; after theme/asset).
**Wire location:** `./resources/stencil/{slug}.json`.

## Shape

```json
{
  "schemaVersion": 5,
  "resource": {
    "type": "stencil",
    "slug": "company-header",
    "name": "Company Header",
    "version": 1,
    "description": "Branded header with logo and address.",
    "tags": ["header", "branding"],
    "content": { "modelVersion": 1, "root": "n-root", "nodes": {}, "slots": {} }
  }
}
```

## Fields (`resource`)

| Field         | Type            | Required | Description                                                                                                                                                                           |
| ------------- | --------------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `type`        | string          | yes      | Discriminator: `"stencil"`.                                                                                                                                                           |
| `slug`        | string          | yes      | Unique within the catalog.                                                                                                                                                            |
| `name`        | string          | yes      | Display name.                                                                                                                                                                         |
| `version`     | integer         | **yes**  | The **published version number** of the carried `content`. Used to pin and to detect conflicts. Added in this contract — see [ADR 0003](../../adr/0003-stencil-version-in-export.md). |
| `description` | string          | no       | Free text.                                                                                                                                                                            |
| `tags`        | array of string | no       | Discovery tags.                                                                                                                                                                       |
| `content`     | object          | yes      | The stencil's `TemplateDocument` (same node/slot model as a template, with its own `modelVersion`).                                                                                   |

## Validation / behaviour

- On import, if `(stencil slug, version)` already exists in the target with **different** content, the import raises `StencilVersionImportConflictsException`.
- Resolution options (AUTHORED MERGE only): **FAIL** (default) or **RENUMBER** (assign the next free version). See [ADR 0003](../../adr/0003-stencil-version-in-export.md) and the README's [Stencil version conflict handling](../README.md).
- Nested stencil nodes use the same v5 provenance shape: `props.version`
  identifies an exact published version. `props.draftVersion` is valid only
  while authoring and therefore blocks publication/export; v4 `props.isDraft`
  is no longer accepted.

## Shape history

- The required `version` field (published-version pin) was added per [ADR 0003](../../adr/0003-stencil-version-in-export.md) — originally landed with `epistola-model:0.6.0`. The prior shape carried `content` with no version pin. (Note: this is the stencil's own published-content version, internal to the resource — it is unrelated to the catalog-wide wire `schemaVersion`, which is `5`.) This is the history of this resource's shape; on the wire the detail carries the catalog-wide `schemaVersion`, not an independent stencil-contract version.

## Related parts

- Embedded by [Template](template.md) (via `node.props.catalogKey`); cross-catalog use surfaces as a [Manifest](manifest.md) `dependency` (`type: stencil`).
